@@ -70,6 +70,11 @@ Working version
   (Simon Cruanes, review by Yotam Barnoy, Gabriel Scherer, Daniel Bünzli,
    Ulugbek Abdullaev, and Nicolás Ojeda Bär)
 
+- #11576: Fix bug in Bigarray.Genarray.init in the the case of zero-dimensional
+  arrays.
+  (Nicolás Ojeda Bär, Jeremy Yallop, report by Masayuki Takeda, review by Jeremy
+  Yallop and Florian Angeletti)
+
 ### Other libraries:
 
 - #11475: Make Unix terminal interface bindings domain-safe
